--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,3 +49,30 @@
   background-color: #000;
   color: #fff;
 }
+
+.joinChat-div{
+  background-color: #fafafa;
+  border-radius: 10px;
+  text-align: center;
+  height: 450px;
+  width: 300px;
+  margin: 5% auto;
+  padding-top: 5%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+} .joinChat-div h3{
+  font-family: 'Nunito', sans-serif;
+}
+
+.joinChat-div input{
+  width: 210px;
+  height: 40px;
+  margin: 7px;
+  border: 2px solid #000000;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 16px;
+}
+
+.join-btn{
+  margin-top: 60%;
+}
