--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,7 @@
 }
 
 
+
 .nav-btns {
   border-radius: 5px;
   border-style: none;
@@ -90,6 +91,7 @@
 
 .chat-footer{
   text-align: center;
+  margin-top: 30px;
 }
 
 .chat-footer input{
@@ -147,7 +149,7 @@
   width: 100%;
   height: 100%;
   border: none;
-  overflow-y: hidden;
+  overflow-y: scroll;
   overflow-x: hidden;
 }
 
@@ -158,9 +160,10 @@
 
 .chat-body{
   height: 600px;
-  border: 1px solid #263238;
   background: #fff;
+  border-radius: 10px;
   position: relative;
+  background-color: #f4fff7;
 }
 
 .message-item{
@@ -214,8 +217,8 @@
 
 #receiver .message-content {
   justify-content: flex-end;
-  background-color: #96ec74;
-  color: #000;
+  background-color: #59c42f;
+  color: rgb(255, 255, 255);
   border-radius: 100px 100px 10px 100px;
   padding: 10px 30px;
 }
@@ -232,5 +235,7 @@
 
 .message-meta {
   display: flex;
-  font-size: 12px;
+  font-size: 11px;
+  font-family: 'Nunito', sans-serif;
+  font-weight: 400;
 }
